# cyclops

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
cyclops/: Cargo.toml
cyclops-cli/: Cargo.toml
cyclops-cli/src/: main.rs
cyclops/src/: lib.rs
pyclops/: Cargo.toml  pyproject.toml
pyclops/pyclops/: .tool-versions  __init__.py
pyclops/src/: lib.rs
src/: lib.rs  main.rs
