[package]
authors = ["Michael Simpson <michael@wearethorn.org>"]
edition = "2018"
name = "cyclops"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gpu = ["faiss/gpu"]

[dependencies]
bitarray = { version = "0.2.6", features = ["unstable-512-bit-simd"] }
cv = "0.6.0"
faiss = { version = "0.9.0" }
ndarray = "0.14.0"
image = "0.23.14"
