[package]
authors = ["Michael Simpson <michael@wearethorn.org>"]
edition = "2018"
name = "cyclops"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
# The akaze crate is too slow without optimizations.
opt-level = 3

[dependencies]
bitarray = { version = "0.3", features = ["unstable-512-bit-simd"] }
akaze = "0.7"
faiss = { version = "0.9", features = ["gpu"] }
ndarray = "0.15"
image = "0.23"
