[package]
authors = ["Michael Simpson <michael@wearethorn.org>"]
edition = "2018"
name = "cyclops"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
faiss = { version = "0.10", features = ["gpu"] }
ndarray = "0.15"
opencv = "0.60"
