[package]
authors = ["Michael Simpson <michael@wearethorn.org>"]
edition = "2018"
name = "pyclops"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "pyclops"

[dependencies]
cyclops = { path = "../cyclops" }
numpy = "0.15"

[dependencies.pyo3]
features = ["extension-module"]
version = "0.15"
