[tool.poetry]
authors = ["Michael Simpson <michael@wearethorn.org>"]
description = ""
name = "pyclops"
version = "0.1.0"

[tool.poetry.dependencies]
maturin = "^0.9.0"
numpy = "^1.20.1"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.20.0"
mypy = "^0.800"
isort = "^5.7.0"

[build-system]
build-backend = "maturin"
requires = ["maturin"]
